--- a/PLConsoleApp/PLConsoleApp.csproj
+++ b/PLConsoleApp/PLConsoleApp.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\PressureLossCalculations\PressureLossCalculations.csproj" />
   </ItemGroup>
 
