fixed data acces for API (with DI)

--- a/PLWebAPI/appsettings.json
+++ b/PLWebAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "myDb1": "Server=.;Database=People;User Id=sa;Password=Password1@;"
+    },
+    "AllowedHosts": "*"
 }
